# eltexsoft-url-shortener-task

./: README.md
django/: pyproject.toml
django/config/: urls.py
django/config/settings/: base.py  dev.py  prod.py
django/shortener/: admin.py  apiviews.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
django/shortener/migrations/: 0001_initial.py  0002_shorturl_short_id.py  0003_shorturl_creator_ip.py  0004_shorturl_transitions_number.py
django/users/: apiviews.py  urls.py
