[tool.poetry]
name = "eltexsoft-url-shortener-task"
version = "0.1.0"
description = ""
authors = ["Yevhen Shymotyuk <yevhen.shymotyuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "*"
python-dotenv = "*"
python-decouple = "*"
psycopg2-binary = "*"
coverage = "*"
django-extensions = "*"
pillow = "*"
gunicorn = "*"
djangorestframework = "^3.10"
drf-yasg = "^1.17.1"
djangorestframework-jwt = "^1.11.0"
django-cors-headers = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
